--- a/master.ipynb
+++ b/master.ipynb
@@ -8,7 +8,10 @@
    "source": [
     "from dataloader import ccd_load_data\n",
     "from DSTA import DSTA\n",
-    "from TSAA_Module import SelfAttentionAggregation"
+    "from TSAA_Module import SelfAttentionAggregation\n",
+    "from exp_loss_function import exp_loss\n",
+    "import torch.nn as nn\n",
+    "import torch"
    ]
   },
   {
@@ -20,8 +23,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
